src/test/ui/feature-gate-macro-lifetime-matcher.stderr
error[E0658]: :lifetime fragment specifier is experimental and subject to change (see issue #46895)
  --> $DIR/feature-gate-macro-lifetime-matcher.rs:14:19
   |
14 | macro_rules! m { ($lt:lifetime) => {} }
   |                   ^^^^^^^^^^^^
   |
   = help: add #![feature(macro_lifetime_matcher)] to the crate attributes to enable

error: aborting due to previous error

